Fixed harder spacing, shrunk fonts

--- a/source/styles/screen.styl
+++ b/source/styles/screen.styl
@@ -183,6 +183,8 @@ header
       text-decoration underline
   // Blog title
   h1
+    line-height 4rem
+    font-size 2.5rem
     color $title-color
     font-family $title-font
     font-size 4.5rem
